--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,151 @@
-// Specific CSS for your home-page
+html, body, .container{
+    height: 100%;
+    margin:0;
+    padding:0;
+}
+
+
+.content {
+    font-family: 'Atkinson Hyperlegible', sans-serif;
+    background-color: white;
+    padding: 10px;
+    padding-bottom: 80px;
+
+}
+
+#upper-bar-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+
+#upper-bar-main p {
+    font-size: 32px;
+    color: #2E4552;
+    margin-top: 15px;
+    margin-left: 10px;
+    font-weight: bold;
+    border-radius: 10px 10px 0px 10px;
+
+
+
+}
+
+
+
+.map-section {
+    display: flex;
+    color: #2E4552;
+    text-align: center;
+    margin-top: 20px;
+    flex-direction: column;
+    height: 10%;
+}
+
+.map-section h1 {
+    font-size: 66px;
+    font-weight: bold;
+}
+
+.map-section p {
+    font-size: 20px;
+    z-index:1;
+
+}
+
+.map-section img {
+    width: 100%;
+    flex-shrink: 3;
+    position: relative;
+    top: -80px;
+    margin-bottom: -80px;
+
+}
+
+.main-add-map {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: #2E4552;
+    background-color: #23786B;
+    font-size: 32px;
+    margin-top: 20px;
+    padding: 5px 20px;
+    border-radius: 10px;
+    border: 2px solid white;
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+    animation: fade 1s linear;
+    text-decoration: none;
+}
+
+.main-add-map:hover {
+  color: white;
+}
+.bottom-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    text-decoration: none;
+    font-size: 24px;
+    padding: 5px;
+    box-shadow: 0px 0px 10px #888888;
+}
+.bottom-bar a {
+    color: #2E4552;
+}
+
+.bottom-button p {
+    color: #2E4552;
+    font-size: 12px;
+    font-weight: bolder;
+    padding-top: 0;
+    margin: 0;
+}
+.active {
+  color: #23786B!important;
+}
+.bottom-button {
+    text-align: center;
+}
+
+.upper-bar .logo-n-text p {
+    font-size: 32px;
+    color: white;
+    margin-top: 15px;
+    margin-left: 10px;
+    font-weight: bold;
+    border-radius: 10px 10px 0px 10px;
+}
+
+.logo-n-text {
+    display: flex;
+    align-items: center;
+}
+
+.upper-bar p {
+    font-size: 24px;
+    color: white;
+    margin-top: 15px;
+    border-radius: 10px 10px 0px 10px;
+}
+
+.upper-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: -15px;
+}
+
+
+@keyframes fade {
+    0%,100% { opacity: 0 }
+    100% { opacity: 1 }
+  }
