--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -5,10 +5,12 @@
 
 .username {
     font-size: 30px;
-    margin-top: 15px;
+    margin-top: 10px;
     font-weight: bold;
     margin-bottom: 50px;
+    color: #23786B;
 }
+
 .user-info {
     text-align: left;
     margin-top: 25px;
@@ -24,4 +26,18 @@
 .user-info p{
     margin-bottom: 0px;
     padding-bottom: 0px;
+}
+
+.profile-img {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  border: 5px solid white;
+  box-shadow: 0px 0px 0px 5px #2E4552;
+}
+
+.inf p {
+  border-left: 3px solid #2E4552;
+  padding-left: 10px;
+  margin-bottom: 8px;
 }
