--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,10 @@
 
 body {
   background-color: white;
+}
 
+h1 {
+  margin-bottom: 16px;
 }
 
 .cards {
@@ -18,28 +21,43 @@ body {
   height: 148px;
   border-radius: 10px;
   margin-bottom: 16px;
-  box-shadow: 0px 0px 6px #888888;
+  box-shadow: 0px 0px 6px #9A9A9A;
   display: flex;
+  text-decoration: none;
+  color: black;
 }
 
 .where {
-  margin-top: 16px;
-  margin-left: 16px;
+  margin-top: 18px;
+  margin-left: 18px;
 }
 
 .when {
-  margin-left: 16px;
+  margin-left: 18px;
 }
 
-.arrow-image {
-  width: 11px;
-  height: 18px;
+.flags {
+  margin-left: 18px;
+}
+
+.arrows {
+  display: flex;
+}
+
+.arrow {
   position: relative;
-  left: 310px;
-  bottom: 32px;
+  left: 110px;
+  bottom: 37px;
 }
 
 .triangle-image {
-  width: 22px;
-  height: 24px;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 14px;
+  height: 14px;
+}
+
+.flag  {
+  width: 40px;
+  border-radius: 40%;
 }
