added the add trip page, but not yet styled

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -2,8 +2,9 @@
   <div class="show-card">
     <!-- date only is hard coded-->
     <div class="date">
-      <p><%=@flight.date%></p>
-      <%=  %>
+      <% @trip.flights.each do |flight| %>
+      <p><%= flight.date %></p>
+      <% end %>
     </div>
     <!-- flags and the name of the country -> change this to a flexbox-->
 
