--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,13 @@
             <p>Welcome to <strong>Traveld</strong>, We help you travel worry-free accross Europe, all you have to do is to enter your trip details to get all the needed information about the Corona restrictions through the visited countries </p>
             <img src="https://i.ibb.co/1rFDL7R/map.png" alt="World map">
         </div>
-        <a href="#" class="main-add-map"><i class="fas fa-plus"></i>Add new map</a>
-    </div>
+        <% if user_signed_in? %>
+          <%= simple_form_for @trip do |f| %>
+          <%= f.button :submit %>
+          <% end %>
+        <% else %>
+        <%= link_to "Sign in / Sign up", new_user_session_path %>
+        <% end %>
+
+        </div>
 </div>
