--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
       <div class="bottom-button">
         <%= link_to root_path do %>
         <i class='fas fa-home'></i>
-        <p class="active">Home</p>
+        <p>Home</p>
         <% end %>
       </div>
       <div class="bottom-button">
