Styled the log-in button and the creat trip button on the homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -77,7 +77,7 @@ html, body, .container{
     text-decoration: none;
     color: white;
     font-weight: bolder;
-    animation: fade 1s linear;
+    width: 100%;
 }
 
 .main-add-map:hover {
