--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,10 +11,10 @@
         </div>
         <% if user_signed_in? %>
           <%= simple_form_for @trip do |f| %>
-          <%= f.button :submit %>
+          <%= f.button :submit, class: "main-add-map"%>
           <% end %>
         <% else %>
-        <%= link_to "Sign in / Sign up", new_user_session_path %>
+        <%= link_to "Sign in / Sign up", new_user_session_path, class: "main-add-map" %>
         <% end %>
 
         </div>
