--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -6,7 +6,7 @@
     <div class="date">
 
       <% @trip.flights.each do |flight| %>
-      <p><%= flight.date %></p>
+      <p><%= flight.date.strftime '%a %d/%m/%y' %></p>
       <% end %>
 
     </div>
