--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -2,6 +2,7 @@
 <div class="cards">
   <% @trips.each do |t| %>
     <%= link_to (trip_path(t)) do %>
+      <% unless t.flights.empty? %>
       <div class="card">
         <p class="where"><%= "Trip to #{t.flights[0].destination}" %></p>
         <p class="when"><%= "#{t.flights[0].date.strftime '%a %d/%m/%y'} - #{t.flights[0].date.strftime '%a %d/%m/%y'}" %></p>
@@ -21,6 +22,7 @@
           </div>
         </div>
       </div>
+      <% end %>
     <% end %>
   <% end %>
 </div>
