--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,3 +1,7 @@
+<div class="header">
+  <!-- title and stuff -->
+  <h1 class="title"> Trip to <%=@trip.flights[0].destination%> </h1>
+</div>
 <% @trip.flights.each do |flight| %>
 <div class="container-show">
 
