--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
- <div class="container">
+<div class="container">
         <div class="content">
         <div id="upper-bar-main" id="home">
-          <p>Traveld</p>
+           <%= image_tag "Traveld-logo.png", class:"logo" %>
         </div>
 
         <div class="map-section">
