--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -72,26 +72,34 @@
     </div>
     <!-- all the other information -->
     <div class="further_info">
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
-      <p>Here is more information</p>
+      <p>
+      1. Baggage Drop-off and Check in
+      The deadline for the check-in remains unchanged.
+      Hall A only.
+      2. Hygiene & Health Procedures
+      Protective equipment (i.e. mask) required as of entering the terminal.
+      No restrictions for accompanying partners at the airport.
+      No mandatory health checks or tests are performed at the terminal entrance.
+      Depends on rules due to origin or destination.
+      3. Time Management at Airport
+      No additional waiting time expected due to Covid-19 measures.
+      Floor markings to keep physical distance have been introduced.
+      4. Baggage Claim
+      Max. 2 piece of hand luggage incl. personal item are allowed at the security control.
+      Floor markings to keep physical distance have been introduced.
+      5. Boarding
+      For short & medium haul flights:
+      Please listen to the gate announcements and wait until your boarding group is called.
+      Use our automatic boarding gates for contactless boarding.
+      Please adhere to the social distancing requirements and follow the instructions from our gate team
+      For long haul flights:
+      Please listen to the gate announcements and follow the boarding instructions.
+      Use our automatic boarding gates for contactless boarding.
+      Please adhere to the social distancing requirements and follow the instructions from our gate team
+      6. Deboarding
+      Please adhere to the announcements and instruction from our cabin crew.
+      Consider your fellow passengers and maintain social distancing upon leaving the aircraft.
+      </p>
     </div>
   </div>
 </div>
