--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,6 +45,7 @@ html, body, .container{
 .map-section h1 {
     font-size: 66px;
     font-weight: bold;
+    font-family: 'Overpass', sans-serif;
 }
 
 .map-section p {
