--- a/app/views/trip_flights/new.html.erb
+++ b/app/views/trip_flights/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1>New trip</h1>
+
   <%= link_to 'Cancel', root_path,  class: "cancel-link" %>
       <div class="top-mark">
       <svg width="148" height="26" viewBox="0 0 148 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,9 +19,9 @@
       <%= f.input :flight_type, collection: ["outbound", "inbound", "transfer"], as: :select, input_html: { class: "input-style" }, label_html: { class: "nice-class" } %>
       <%= f.input :flight, collection: Flight.all, input_html: { multiple: true, class: 'multiple-select input-style' }, label_html: { class: "nice-class" } , include_hidden: false, label_method: :to_label %>
       <%= f.input :flight_type, collection: ["outbound", "inbound", "transfer"], as: :select, input_html: { class: "input-style" }, label_html: { class: "nice-class" } %>
-        <%= f.submit "Add flight", class: 'flight-submit' %>
+        <%= f.submit "Next", class: 'flight-submit' %>
 
-    
+
       <% end %>
     </div>
   </div>
