--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -13,8 +13,11 @@
 
 .user-info {
     text-align: left;
-    margin-top: 25px;
-    margin-left: 10px;
+    margin: 25px 10px;
+    border: 1px solid #23786B;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 2px black;
 }
 
 .user-info h3 {
