--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 
         <div class="map-section">
             <h1>Hello!</h1>
-            <p>Welcome to <strong>Traveld</strong>, We help you travel worry-free accross Europe, all you have to do is to enter your trip details to get all the needed information about the Corona restrictions through the visited countries </p>
+            <p>Welcome to <strong>Traveld</strong>We help you travel worry-free accross Europe, enter your trip details to get all the needed information.</p>
             <img src="https://i.ibb.co/1rFDL7R/map.png" alt="World map">
         </div>
         <% if user_signed_in? %>
