--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
         </div>
         <% if user_signed_in? %>
           <%= simple_form_for @trip do |f| %>
-          <%= f.button :submit, class: "main-add-map"%>
+          <%= f.button :submit, 'Where to?',  class: "main-add-map"%>
           <% end %>
         <% else %>
         <%= link_to "Sign in / Sign up", new_user_session_path, class: "main-add-map" %>
