--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -6,7 +6,7 @@
   <div class="show-card">
     <!-- date only is hard coded-->
     <div class="date">
-    
+
     </div>
     <!-- flags and the name of the country -> change this to a flexbox-->
 
@@ -72,34 +72,13 @@
     </div>
     <!-- all the other information -->
     <div class="further_info">
-      <p>
-      1. Baggage Drop-off and Check in
-      The deadline for the check-in remains unchanged.
-      Hall A only.
-      2. Hygiene & Health Procedures
-      Protective equipment (i.e. mask) required as of entering the terminal.
-      No restrictions for accompanying partners at the airport.
-      No mandatory health checks or tests are performed at the terminal entrance.
-      Depends on rules due to origin or destination.
-      3. Time Management at Airport
-      No additional waiting time expected due to Covid-19 measures.
-      Floor markings to keep physical distance have been introduced.
-      4. Baggage Claim
-      Max. 2 piece of hand luggage incl. personal item are allowed at the security control.
-      Floor markings to keep physical distance have been introduced.
-      5. Boarding
-      For short & medium haul flights:
-      Please listen to the gate announcements and wait until your boarding group is called.
-      Use our automatic boarding gates for contactless boarding.
-      Please adhere to the social distancing requirements and follow the instructions from our gate team
-      For long haul flights:
-      Please listen to the gate announcements and follow the boarding instructions.
-      Use our automatic boarding gates for contactless boarding.
-      Please adhere to the social distancing requirements and follow the instructions from our gate team
-      6. Deboarding
-      Please adhere to the announcements and instruction from our cabin crew.
-      Consider your fellow passengers and maintain social distancing upon leaving the aircraft.
-      </p>
+  <ul>
+      <li>Public transport is operational, but regional governments may applied restrictions on travel between </li>
+      <li>Bars are open depending on the region with reduced capacity to allow for social distancing.</li>
+      <li>Nightclubs are open depending on the region with reduced capacity to allow for social distancing.</li>
+      <li>Shops are open with adapted safety measures in place, such as the use of hand sanitizer and social distancing. Business hours are subject to regional restrictions.</li>
+
+  </ul>
     </div>
   </div>
 </div>
