--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -6,7 +6,7 @@
   <div class="show-card">
     <!-- date only is hard coded-->
     <div class="date">
-    
+
     </div>
     <!-- flags and the name of the country -> change this to a flexbox-->
 
@@ -28,7 +28,8 @@
     <!-- icons and the requirements (dashboard) e.g. quarantine -->
     <div class="icons_overview">
       <div class="box_a">
-        <%= image_tag "house.png", class:"img-show-page" %>
+        <%# <%= image_tag "house.png", class:"img-show-page" %>
+        <i class="fas fa-home"></i>
       </div>
       <div class="box_text">
         <p class="font_text">10 days</p>
@@ -36,13 +37,15 @@
       <div class="box-empty-1">
       </div>
       <div class="box_b">
-        <%= image_tag "shopping.png", class:"img-show-page" %>
+        <%# <%= image_tag "shopping.png", class:"img-show-page" %>
+        <i class="fas fa-shopping-cart"></i>
       </div>
       <div class="box_text">
         <p class="font_text">open</p>
       </div>
       <div class="box_c">
-        <%= image_tag "mask.png", class:"img-show-page" %>
+        <%# <%= image_tag "mask.png", class:"img-show-page" %>
+        <i class="fas fa-head-side-mask"></i>
       </div>
       <div class="box_text">
         <p class="font_text">not required</p>
@@ -50,13 +53,14 @@
       <div class="box-empty-1">
       </div>
       <div class="box_d">
-        <%= image_tag "meal.png", class:"img-show-page" %>
+        <%# <%= image_tag "meal.png", class:"img-show-page" %>
+        <i class="fas fa-utensils"></i>
       </div>
       <div class="box_text">
         <p class="font_text">open</p>
       </div>
       <div class="box_e">
-        <%= image_tag "test.png", class:"img-show-page" %>
+        <i class="fas fa-vial"></i>
       </div>
       <div class="box_text">
         <p class="font_text">Anti-Gen required</p>
@@ -64,7 +68,8 @@
       <div class="box-empty-1">
       </div>
       <div class="box_f">
-        <%= image_tag "club.png", class:"img-show-page" %>
+        <%# <%= image_tag "club.png", class:"img-show-page" %>
+        <i class="fas fa-cocktail"></i>
       </div>
       <div class="box_text">
         <p class="font_text">not open</p>
@@ -79,26 +84,6 @@
       2. Hygiene & Health Procedures
       Protective equipment (i.e. mask) required as of entering the terminal.
       No restrictions for accompanying partners at the airport.
-      No mandatory health checks or tests are performed at the terminal entrance.
-      Depends on rules due to origin or destination.
-      3. Time Management at Airport
-      No additional waiting time expected due to Covid-19 measures.
-      Floor markings to keep physical distance have been introduced.
-      4. Baggage Claim
-      Max. 2 piece of hand luggage incl. personal item are allowed at the security control.
-      Floor markings to keep physical distance have been introduced.
-      5. Boarding
-      For short & medium haul flights:
-      Please listen to the gate announcements and wait until your boarding group is called.
-      Use our automatic boarding gates for contactless boarding.
-      Please adhere to the social distancing requirements and follow the instructions from our gate team
-      For long haul flights:
-      Please listen to the gate announcements and follow the boarding instructions.
-      Use our automatic boarding gates for contactless boarding.
-      Please adhere to the social distancing requirements and follow the instructions from our gate team
-      6. Deboarding
-      Please adhere to the announcements and instruction from our cabin crew.
-      Consider your fellow passengers and maintain social distancing upon leaving the aircraft.
       </p>
     </div>
   </div>
