--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,8 +1,8 @@
 
 .icons_overview {
   display: grid;
-  grid-template-columns: 0.8fr 1fr 5px 1fr 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 0.25fr 1fr 5px 0.25fr 1fr;
+    grid-template-rows: repeat(3, 0.5fr);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   padding-top: 30px;
@@ -19,6 +19,7 @@
   border-radius: 7px;
   padding: 4px;
   width: 100%;
+  text-align: center;
 }
 
 .img-show-page {
@@ -139,4 +140,9 @@
 
 .further_info {
   margin-top: 30px;
+}
+
+.fas {
+  color: #2E4552;
+  font-size: 30px;
 }
