--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,8 @@ body {
 h1 {
   margin-bottom: 16px;
   font-family: 'Overpass', sans-serif;
+  color: #2E4552;
+  font-weight: bold;
 }
 
 .cards {
