--- a/app/assets/stylesheets/pages/_create_flight.scss
+++ b/app/assets/stylesheets/pages/_create_flight.scss
@@ -1,12 +1,13 @@
 .flight-submit {
     background-color: #23786B;
-    font-size: 16px;
+    font-size: 32px;
     border-radius: 10px;
     padding: 10px 15px;
     border: 2px solid white;
     text-decoration: none;
     color: white;
     font-weight: bolder;
+    width: 100%;
 }
 .input-style {
   border-radius: 10px;
