--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -1,11 +1,12 @@
 .container {
   background-color: white;
-  padding-top: 80px;
 }
 
 h1 {
   text-align: center;
   padding-top: 20px;
+  font-weight: bold;
+  color:#2E4552;
 }
 
 .form .button {
