--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -32,7 +32,7 @@
         <i class="fas fa-home"></i>
       </div>
       <div class="box_text">
-        <p class="font_text">10 days</p>
+        <p class="font_text">up to days</p>
       </div>
       <div class="box-empty-1">
       </div>
@@ -41,14 +41,14 @@
         <i class="fas fa-shopping-cart"></i>
       </div>
       <div class="box_text">
-        <p class="font_text">open</p>
+        <p class="font_text"><%= @risk_level %></p>
       </div>
       <div class="box_c">
         <%# <%= image_tag "mask.png", class:"img-show-page" %>
         <i class="fas fa-head-side-mask"></i>
       </div>
       <div class="box_text">
-        <p class="font_text">not required</p>
+        <p class="font_text"><%= @mask_required %></p>
       </div>
       <div class="box-empty-1">
       </div>
@@ -63,7 +63,7 @@
         <i class="fas fa-vial"></i>
       </div>
       <div class="box_text">
-        <p class="font_text">Anti-Gen required</p>
+        <p class="font_text"><%= @test_type %></p>
       </div>
       <div class="box-empty-1">
       </div>
@@ -77,13 +77,16 @@
     </div>
     <!-- all the other information -->
     <div class="further_info">
-
+<strong></strong>
   <ul>
-      <li>Public transport is operational, but regional governments may applied restrictions on travel between </li>
-      <li>Bars are open depending on the region with reduced capacity to allow for social distancing.</li>
-      <li>Nightclubs are open depending on the region with reduced capacity to allow for social distancing.</li>
-      <li>Shops are open with adapted safety measures in place, such as the use of hand sanitizer and social distancing. Business hours are subject to regional restrictions.</li>
-
+  <li><strong>Test required?</strong> <%= @test_required %> </li><br>
+  <li><strong>Test type:</strong> <%= @test_type %></li><br>
+  <li><strong>When do you have to take a test:</strong> <%= @when_to_test %></li><br>
+  <li><strong>Test type:</strong> <%= @test_type %></li><br>
+  <li><strong>Read more infos on the test:</strong> <%= @test_more_infos %></li><br>
+  <li><strong>Read more infos on the quarantine:</strong> <%= @quarantine_more_infos %></li><br>
+  <li><strong>Exit requirments:</strong><%= @exit_requirments %> </li><br>
+  <li><strong>More infos on the exit rules:</strong> <%= @exit_rules_link %></li>
   </ul>
 
     </div>
