--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -21,6 +21,7 @@
           <%= image_tag("index-arrow.jpg", class:"arrow-image") %>
           </div>
         </div>
+         <p class="description">Check out more infos about your trip</p>
       </div>
       <% end %>
     <% end %>
