--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,10 +2,14 @@
 .icons_overview {
   display: grid;
   grid-template-columns: 0.25fr 1fr 5px 0.25fr 1fr;
-    grid-template-rows: repeat(3, 0.5fr);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   padding-top: 30px;
+}
+
+.box_e {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .font_text {
@@ -112,6 +116,11 @@
   padding-left: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  padding: 6px;
+  margin-left: 25px;
+  margin-right: 25px;
+
 }
 
 
@@ -139,7 +148,7 @@
 }
 
 .further_info {
-  margin-top: 30px;
+  margin-top: 5px;
   padding-bottom: 80px;
 }
 
@@ -150,4 +159,26 @@
 
 ul {
   list-style-type: none;
+  overflow-wrap: break-word;
+}
+.infos-here {
+  display: flex;
+}
+
+.extra-infos {
+  display: flex;
+  justify-content: space-between;
+  padding: 6px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.font_text1 {
+  background-color: #83D644;
+  padding: 2px;
+  border-radius: 6px;
+}
+
+.box_e {
+  justify-content: space-between;
 }
