--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,39 +1,29 @@
 <div class="header">
   <!-- title and stuff -->
-  <h1 class="title"> Trip to <%=@trip.flights[0].destination%> </h1>
+  <h1 class="title"> Trip to <%=@trip.destination%> </h1>
 </div>
-<% @trip.flights.each do |flight| %>
 <div class="container-show">
 
   <div class="show-card">
-    <!-- date only is hard coded-->
-    <div class="date">
-
-      <% @trip.flights.each do |flight| %>
-  
-      <% end %>
-
-    </div>
     <!-- flags and the name of the country -> change this to a flexbox-->
     <div class="flexbox-panel">
       <div class="flex-item">
-        <% c = ISO3166::Country.find_country_by_name(flight.departure) %>
+        <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
-        <p><%= flight.departure %></p>
+        <p><%= @trip.home %></p>
       </div>
       <div class="flex-item">
         <%= image_tag "arrow.png", class:"img-show-page-arrow-trips" %>
       </div>
       <div class="flex-item">
-        <% c = ISO3166::Country.find_country_by_name(flight.destination) %>
+        <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
-        <p><%= flight.destination %></p>
+        <p><%= @trip.destination %></p>
       </div>
     </div>
-    <%= link_to "More info here", flight_path(flight) %>
+    <%= link_to "More info here", flight_path(@trip) %>
   </div>
 </div>
-<% end %>
 <div class="nav-bar">
   <!-- nav-bar -->
 </div>
