--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -98,6 +98,15 @@
   margin: 0 auto;
 }
 
+.img-show-page-arrow-trips_way_back {
+  width: 22px;
+  height: 22px;
+  object-fit: cover;
+  border-radius: 5%;
+  margin: 0 auto;
+  transform: scaleX(-1);
+}
+
 
 .flexbox-panel {
      display: flex;
