--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -15,6 +15,118 @@
       </div>
       <div class="flex-item">
         <%= image_tag "arrow.png", class:"img-show-page-arrow-trips" %>
+      </div>
+
+      <div class="flex-item">
+        <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
+        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
+        <p><%= @trip.destination %></p>
+      </div>
+    </div>
+      <div class="extra-infos">
+        <i class="fas fa-head-side-mask"></i>
+        <p class="font_text1"><%= @mask_required_destination %></p>
+      </div>
+      <div class="extra-infos">
+        <i class="fas fa-vial"></i>
+        <p class="font_text1"><%= @test_type_destination %></p>
+      </div>
+
+
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal1">
+  More infos here
+</button>
+
+
+  </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Your trip to <%= @trip.destination %></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+                   <!-- testing from here -->
+<div class="flexbox-panel">
+      <div class="flex-item">
+        <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
+        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-flights">
+        <p><%= @trip.home %></p>
+      </div>
+      <div class="flex-item">
+        <%= image_tag "arrow.png", class:"img-show-page-arrow-flights" %>
+      </div>
+      <div class="flex-item">
+        <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
+        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-flights">
+        <p><%= @trip.destination %></p>
+      </div>
+    </div>
+    <!-- icons and the requirements (dashboard) e.g. quarantine -->
+    <div class="icons_overview">
+      <div class="box_a">
+        <%# <%= image_tag "house.png", class:"img-show-page" %>
+        <i class="fas fa-home"></i>
+      </div>
+      <div class="box_text">
+        <p class="font_text">up to 14 days</p>
+      </div>
+      <div class="box-empty-1">
+      </div>
+     <div class="box_c">
+        <%# <%= image_tag "mask.png", class:"img-show-page" %>
+        <i class="fas fa-head-side-mask"></i>
+      </div>
+      <div class="box_text">
+        <p class="font_text"><%= @mask_required_destination %></p>
+      </div>
+    </div>
+        <div class="box_e">
+          <i class="fas fa-vial"></i>
+        <div class="box_text">
+          <p class="font_text"><%= @test_type_destination %></p>
+        </div>
+      </div>
+      <ul>
+      <li><strong>Test required?</strong> <%= @test_required_destination %> </li><br>
+      <li><strong>Test type:</strong> <%= @test_type_destination %></li><br>
+      <li><strong>When do you have to take a test:</strong> <%= @when_to_test_destination %></li><br>
+      <li><strong>Test type:</strong> <%= @test_type %></li><br>
+      <li><strong>Read more infos on the test:</strong> <%= @test_more_infos_destination %></li><br>
+      <li><strong>Read more infos on the quarantine:</strong> <%= @quarantine_more_infos_destination %></li><br>
+      <li><strong>Exit requirments:</strong><%= @exit_requirments_destination %> </li><br>
+      <li><strong>More infos on the exit rules:</strong> <%= link_to "#{@exit_rules_link_destination}", @exit_rules_link_destination %></li>
+      </ul>
+  <!-- testing up to here -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-show">
+  <div class="show-card">
+
+    <!-- flags and the name of the country -> change this to a flexbox-->
+    <div class="flexbox-panel">
+      <div class="flex-item">
+        <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
+        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
+        <p><%= @trip.home %></p>
+      </div>
+      <div class="flex-item">
+        <%= image_tag "arrow.png", class:"img-show-page-arrow-trips_way_back" %>
 
 
       </div>
@@ -23,22 +135,92 @@
         <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-trips">
         <p><%= @trip.destination %></p>
       </div>
+
+
     </div>
-
-
-
-
       <div class="extra-infos">
         <i class="fas fa-head-side-mask"></i>
-        <p class="font_text1"><%= @mask_required %></p>
+        <p class="font_text1"><%= @mask_required_home %></p>
       </div>
       <div class="extra-infos">
         <i class="fas fa-vial"></i>
-        <p class="font_text1"><%= @test_type %></p>
+        <p class="font_text1"><%= @test_type_home %></p>
       </div>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">
+  More infos here
+</button>
 
-    <%= link_to "More info here", flight_path(@trip) %>
 
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal2" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Your trip to <%= @trip.home %></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+                   <!-- testing from here -->
+<div class="flexbox-panel">
+      <div class="flex-item">
+        <% c = ISO3166::Country.find_country_by_name(@trip.home) %>
+        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-flights">
+        <p><%= @trip.home %></p>
+      </div>
+      <div class="flex-item">
+        <%= image_tag "arrow.png", class:"img-show-page-arrow-trips_way_back" %>
+      </div>
+      <div class="flex-item">
+        <% c = ISO3166::Country.find_country_by_name(@trip.destination) %>
+        <img src="https://www.countryflags.io/<%= c.alpha2 %>/flat/64.png" class="img-show-page-flag-flights">
+        <p><%= @trip.destination %></p>
+      </div>
+    </div>
+    <!-- icons and the requirements (dashboard) e.g. quarantine -->
+    <div class="icons_overview">
+      <div class="box_a">
+        <%# <%= image_tag "house.png", class:"img-show-page" %>
+        <i class="fas fa-home"></i>
+      </div>
+      <div class="box_text">
+        <p class="font_text">up to 14 days</p>
+      </div>
+      <div class="box-empty-1">
+      </div>
+     <div class="box_c">
+        <%# <%= image_tag "mask.png", class:"img-show-page" %>
+        <i class="fas fa-head-side-mask"></i>
+      </div>
+      <div class="box_text">
+        <p class="font_text"><%= @mask_required_home %></p>
+      </div>
+    </div>
+        <div class="box_e">
+          <i class="fas fa-vial"></i>
+        <div class="box_text">
+          <p class="font_text"><%= @test_type_home %></p>
+        </div>
+      </div>
+      <ul>
+      <li><strong>Test required?</strong> <%= @test_required_home %> </li><br>
+      <li><strong>Test type:</strong> <%= @test_type_home %></li><br>
+      <li><strong>When do you have to take a test:</strong> <%= @when_to_test_home %></li><br>
+      <li><strong>Test type:</strong> <%= @test_type %></li><br>
+      <li><strong>Read more infos on the test:</strong> <%= @test_more_infos_home %></li><br>
+      <li><strong>Read more infos on the quarantine:</strong> <%= @quarantine_more_infos_home %></li><br>
+      <li><strong>Exit requirments:</strong><%= @exit_requirments_home %> </li><br>
+      <li><strong>More infos on the exit rules:</strong> <%= link_to "#{@exit_rules_link_home}", @exit_rules_link_home %></li>
+      </ul>
+  <!-- testing up to here -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
 <div class="nav-bar">
